--- a/daramola.html
+++ b/daramola.html
@@ -17,10 +17,17 @@
 	
 	<div class="dara-subhead">
 		<h2>Interview Transcript</h2>
-			<p>For History, we were tasked with interviewing someone
-			of our choice, asking them questions in regards to their 
-			life. Then, after we had taken the interview we where to
-			type up the entire interview into a transcript.
-			</p>
+		<p>For History, we were tasked with interviewing someone
+		of our choice that was over the age of 25.<br> 
+		We asked them questions in regards to their 
+		life. Then, after we had taken the interview, we were to
+		type up the entire interview into a transcript.
+		</p>
+	</div>
+		
+	<div class="dara-img">
+		<img src="images/pic.PNG" alt="transcript" style="width: 32.81%; hight: 5%;">
+	</div>
+	
 	</body>
 </html>
