--- a/noel.html
+++ b/noel.html
@@ -17,18 +17,16 @@
 	
 	<div class="noel-subhead">
 		<h2>Layered self portait</h2>
-			<p>This project revolved around making a layered image<br>
-			in photoshop that related to the person who we had 
-			interviewed as a part of our "Interview Transcipt".<br> 
-			(See Daramola's section for more information.)
-			</p>
-			<img src="images/Cole_layered-interview-portriat.jpg" 
-			alt="Portrait" 
-			style="grid-rows: 3 / 3; float: right; width: 31%; height: 5%;">
-			<a href="https://docs.google.com/document/d/1WvLidmqLTUpE5YnpW5u8dujSoHWxJdHpISlecFSa0mg/edit?usp=sharing">
-			<img src="images/Capture.Png" 
-			alt="repsponse" 
-			style="grid-row: 2 / 5; float: right; width: 20.5%; height: 30%; padding-right: 10px;">
+		<p>This project revolved around making a layered image<br>
+		in photoshop that related to the person who we had <br>
+		interviewed as a part of our "Interview Transcipt".<br> 
+		(See Daramola's section for more information.)
+		</p>
+	</div>
+	<div class="noel-image ">
+		<img src="images/Cole_layered-interview-portriat.jpg" alt="Portrait" style="width: 55%; height: 5%;">
+		<a href="https://docs.google.com/document/d/1WvLidmqLTUpE5YnpW5u8dujSoHWxJdHpISlecFSa0mg/edit?usp=sharing">
+		<img src="images/Capture.PNG" alt="response" style="grid-row: 2 / 5; width: 32.81%; height: 30%; padding-left: 10px;">
 		</a>
 	</div>
 	
