--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 	
 	<div class="home-subhead">
 		<h2>Welcome</h2>
-			<p>
-				This website was created as a part of a month long project that coinsided with all three
-				of my classes.<br>
-				Use the navigation bar above to see what I have done for the other classes.
-			</p>
+		<p>This website was created as a part of a month long project that coinsided with all three of my classes.<br>
+		Use the navigation bar above to see what I have done for the other classes.			
+		</p>
 	</div>
 	
 	</body>
