--- a/daramola.html
+++ b/daramola.html
@@ -16,12 +16,11 @@
 	</div>
 	
 	<div class="dara-subhead">
-		<h2>Interview Transcript</h2>
+		<h2>History</h2>
 		<p>For History, we were tasked with interviewing someone
-		of our choice that was over the age of 25.<br> 
-		We asked them questions in regards to their 
-		life. Then, after we had taken the interview, we were to
-		type up the entire interview into a transcript.
+		of our choice that was over the age of 20, asking
+		them questions in regards to their life. Then, after we
+		had taken the interview, we were to transcribe the entire interview into a readable format.
 		</p>
 	</div>
 		
