--- a/noel.html
+++ b/noel.html
@@ -16,13 +16,18 @@
 	</div>
 	
 	<div class="noel-subhead">
-		<h2>Layered self portait</h2>
-		<p>This project revolved around making a layered image<br>
-		in photoshop that related to the person who we had <br>
-		interviewed as a part of our "Interview Transcipt".<br> 
-		(See Daramola's section for more information.)
+		<h2>English</h2>
+		<p>For English, we revolved around making a layered image
+		in photoshop (left) that related to the person who we had
+		interviewed as a part of our "Interview Transcipt".
+		(See Daramola's section for more information.)<br>
+		<br>
+		Later into the project, we would find a topic that our
+		interviewee mentioned and write a 2 page essay (right) that
+		incorperated some creative literature.
 		</p>
 	</div>
+	
 	<div class="noel-image ">
 		<img src="images/Cole_layered-interview-portriat.jpg" alt="Portrait" style="width: 55%; height: 5%;">
 		<a href="https://docs.google.com/document/d/1WvLidmqLTUpE5YnpW5u8dujSoHWxJdHpISlecFSa0mg/edit?usp=sharing">
