--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	
 	<div class="home-subhead">
 		<h2>Welcome</h2>
-		<p>This website was created as a part of a month long project that connected with all three of my classes.<br>
+		<p>This website was created as a part of a month long project that connected
+		with all three of my classes.<br>
 		Use the navigation bar above to see what I have done for the other classes.			
 		</p>
 	</div>
